<resources>
	<string name="app_name" translatable="false">Buntata</string>
	<string name="title_activity_about">About</string>
	<string name="title_activity_datasource">Data sources</string>
	<string name="title_activity_settings">Settings</string>
	<string name="title_activity_log_entries">My data</string>
	<string name="title_activity_catalog">Catalogue</string>
	<string name="title_activity_eula">EULA</string>
	<string name="introduction_welcome_title">Welcome to Buntata</string>
	<string name="introduction_welcome_text">We named our app after the Scottish Gaelic word for potato. Scotland\'s a great place, but sometimes a
		bit rainy…
	</string>
	<string name="introduction_eula_title">EULA Page</string>
	<string name="introduction_eula_text_1">In order to use Buntata we need you to agree to one of our End User Licence Agreements (EULA). We have a
		EULA for both consumers/private users and commercial users. The EULA sets out our legal obligations to our end users.
	</string>
	<string name="introduction_eula_text_2">We do not share any information you provide us with any other party.</string>
	<string name="toast_exception">An error occurred: %1$s</string>
	<string name="menu_data_source">Data source</string>
	<string name="menu_visit_homepage">Visit homepage</string>
	<string name="menu_online_help">Online help</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_log">My data</string>
	<string name="menu_catalog">Catalogue</string>
	<string name="menu_about">About</string>
	<string name="menu_action_search">Search</string>
	<string name="menu_action_zoom">Zoom</string>
	<string name="menu_action_scan_barcode">Scan barcode</string>
	<string name="menu_action_add_log_entry">Add log entry</string>
	<string name="menu_action_add_image">Add image</string>
	<string name="menu_action_share">Share</string>
	<string name="menu_action_export">Export</string>
	<string name="drawer_open">Open navigation drawer</string>
	<string name="drawer_close">Close navigation drawer</string>
	<string name="ga_tracking_id" translatable="false">UA-73714833-2</string>
	<string name="ga_event_category_exception" translatable="false">Exception</string>
	<string name="ga_event_category_datasource_download" translatable="false">Datasource downloaded</string>
	<string name="ga_event_category_datasource_download_failed" translatable="false">Datasource download failed</string>
	<string name="ga_event_category_datasource_deleted" translatable="false">Datasource deleted</string>
	<string name="ga_event_category_node_search" translatable="false">Search</string>
	<string name="ga_event_category_eula" translatable="false">EULA</string>
	<string name="ga_event_category_video" translatable="false">Video</string>
	<string name="ga_event_category_node" translatable="false">Node</string>
	<string name="ga_event_category_log" translatable="false">Log</string>
	<string name="ga_event_action_eula_accepted" translatable="false">Accepted</string>
	<string name="ga_event_action_eula_declined" translatable="false">Declined</string>
	<string name="ga_event_category_preferences" translatable="false">Preferences</string>
	<string name="ga_event_action_show_changelog" translatable="false">Show Changelog</string>
	<string name="ga_event_action_video_view" translatable="false">Show video</string>
	<string name="ga_event_action_node_view" translatable="false">Show node</string>
	<string name="ga_event_action_log_view" translatable="false">Show log</string>
	<string name="ga_event_action_show_eula" translatable="false">Show EULA</string>
	<string name="ga_event_category_scan" translatable="false">Scan</string>
	<string name="ga_event_action_scan_camera" translatable="false">Scan camera</string>
	<string name="generic_settings">Settings</string>
	<string name="generic_yes">Yes</string>
	<string name="generic_no">No</string>
	<string name="generic_cancel">Cancel</string>
	<string name="generic_accept">Accept</string>
	<string name="generic_show">Show</string>
	<string name="datasource_size">Size: ~%1$.1f MB (~%2$.1f MB)</string>
	<string name="snackbar_already_downloaded">Data source already downloaded.</string>
	<string name="snackbar_only_one_download">Only one download at a time possible.</string>
	<string name="snackbar_currently_downloading">Data source download in progress.</string>
	<string name="snackbar_download_successful">Data source downloaded successfully.</string>
	<string name="snackbar_download_unsuccessful">Data source download failed. Please try again.</string>
	<string name="snackbar_select_datasource">Please select a data source.</string>
	<string name="snackbar_updates_available">New updates available</string>
	<string name="snackbar_permission_missing_camera">Camera access has been denied.</string>
	<string name="snackbar_permission_missing_external_storage">Access to external storage has been denied.</string>
	<string name="snackbar_permission_missing_gps">We use your location to tag log entries.</string>
	<string name="snackbar_no_app_found">No app found to handle request.</string>
	<string name="snackbar_export_failed">Export failed.</string>
	<string name="dialog_delete_datasource_title">Delete data source</string>
	<string name="dialog_delete_datasource_text">Do you want to delete this data source?</string>
	<string name="dialog_restlet_please_wait">Please wait</string>
	<string name="dialog_download_title">Download</string>
	<string name="dialog_download_message">Include videos?</string>
	<string name="dialog_export_message">Exporting data</string>
	<string name="dialog_download_cancel_title">Cancel download?</string>
	<string name="dialog_download_cancel_text">Download in progress. Do you want to cancel it?</string>
	<string name="dialog_save_title">Save</string>
	<string name="dialog_save_message">Save changes?</string>
	<string name="dialog_delete_image_title">Delete</string>
	<string name="dialog_delete_image_message">Delete image?</string>
	<string name="dialog_delete_log_entry_title">Delete</string>
	<string name="dialog_delete_log_entry_message">Delete entry?</string>
	<string name="transition_node_view" translatable="false">transition_node_view</string>
	<string name="transition_node_details_view" translatable="false">transition_node_details_view</string>
	<string name="transition_node_image_view" translatable="false">transition_node_image_view</string>
	<string name="transition_video_view" translatable="false">transition_video_view</string>
	<string name="transition_video_details_view" translatable="false">transition_video_details_view</string>
	<string name="about_tab_information">About</string>
	<string name="about_tab_team">Team</string>
	<string name="about_tab_acknowledgements">Acknowledgements</string>
	<string name="about_tab_license">License</string>
	<string name="about_information_text"><![CDATA[<p>Buntata is an app which aids in the identification of plant disease and pathogens and offers information to
		farmers where they can go to get more details about any pests. It provides downloadable datasets allowing users to use the application in the
		field without the need of a mobile signal.</p><p>This first release focusses on potato pests and diseases, but Buntata can easily be adapted for any crop system.</p><p>We would welcome comments, feedback and contributions to this data resource. Feel free to contact us using any of the methods below.</p>]]>
	</string>
	<string name="about_information_text_images">The images contained in Buntata are copyright of the James Hutton Institute (or other organisation
		indicated on the image). These images can be re-used providing there is no commercial gain and the copyright holder is acknowledged.
	</string>
	<string name="google_play_url" translatable="false">https://play.google.com/store/apps/details?id=uk.ac.hutton.ics.buntata</string>
	<string name="website_url" translatable="false">https://ics.hutton.ac.uk/get-buntata/</string>
	<string name="twitter_url" translatable="false">https://twitter.com/BuntataApp</string>
	<string name="social_media_postfix" translatable="false">\u0040BuntataApp \u0023buntata</string>
	<string name="facebook_url" translatable="false">https://www.facebook.com/buntataapp/</string>
	<string name="contact_email_subject" translatable="false">Buntata</string>
	<string name="contact_email_address" translatable="false">cropgeeksapps@hutton.ac.uk</string>
	<string name="contact_email_dialog_title">Send email</string>
	<string name="share_chooser_title">Share</string>
	<string name="datasource_list_header_local">Local data sources</string>
	<string name="datasource_list_header_remote">Remote data sources</string>
	<string name="datasource_text">The following datasets are available to download. Downloading datasets allows you to use Buntata without a data
		connection. When datasets are updated you will be prompted to download an updated version.
	</string>
	<string name="license_view_option_title">Choose an option</string>
	<string name="license_view_option_view_license">View license</string>
	<string name="license_view_option_view_github">View on GitHub</string>
	<string name="search_query_hint">Search symptom or name</string>
	<string name="search_node_name_hint">Search name</string>
	<string name="notification_enable_internet">Could not establish connection to the server. Please make sure you have an active data connection.
	</string>
	<string name="network_intro_title">Checking network connection</string>
	<string name="network_intro_text">To download datasets you need to have a network connection. We are checking for that now.</string>
	<string name="network_intro_status_available">Network connection detected.</string>
	<string name="network_intro_status_unavailable">No network connection detected. Please enable wifi or mobile data to continue.</string>
	<string name="network_intro_button_settings">Settings</string>
	<string name="network_intro_button_refresh">Refresh</string>
	<string name="team_others_title">Others</string>
	<string name="team_others_name">We would like to thank John Jones, Ian Toth, Jennie Brierley, Alison Lees, Graham Cowan, Sonia Humphris and Roy
		Neilson for
		their help in getting the underlying potato dataset and images brought together and assembled. In addition, we appreciate the images and
		information provided by Danny Coyne and Sue Hockland.
	</string>
	<string name="eula_intro_select">In order to use Buntata we need you to agree to one of our End User Licence Agreements (EULA). We have a EULA for
		both consumers/private users and commercial users. The EULA sets out our legal obligations to our end users.
	</string>
	<string name="label_eula_commercial">EULA for commercial users</string>
	<string name="label_eula_consumer">EULA for consumers</string>
	<string name="preferences_ga_opt_out_title">Send anonymous usage statistics</string>
	<string name="preferences_ga_opt_out_message">We will only use this info to analyse and improve the services offered through this app. For more
		details see our EULA.
	</string>
	<string name="preferences_category_layout_title">Layout</string>
	<string name="preferences_category_misc_title">Miscellaneous</string>
	<string name="preferences_changelog_title">Show Changelog</string>
	<string name="preferences_changelog_summary">Show the latest changes</string>
	<string name="preferences_columns_portrait_title">Portrait mode columns</string>
	<string name="preferences_columns_portrait_summary">Number of columns in portrait mode: %1$d</string>
	<string name="preferences_columns_landscape_title">Landscape mode columns</string>
	<string name="preferences_columns_landscape_summary">Number of columns in landscape mode: %1$d</string>
	<string name="node_details_note_hint">Notes</string>
	<string name="title_datasource">Data source</string>
	<string name="title_node_name">Name</string>
	<string name="title_latitude">Latitude</string>
	<string name="title_longitude">Longitude</string>
</resources>