<!--
  ~ Copyright 2016 Information & Computational Sciences, The James Hutton Institute
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
		android:title="@string/preferences_category_layout_title">
		<uk.ac.hutton.ics.buntata.util.NumberPickerPreference
			android:key="prefs.columns.portrait"
			android:title="@string/preferences_columns_portrait_title"
			android:summary="@string/preferences_columns_portrait_summary"
			android:icon="@drawable/preferences_columns_portrait"
			min="1"
			max="3"
			android:defaultValue="2"/>

		<uk.ac.hutton.ics.buntata.util.NumberPickerPreference
			android:key="prefs.columns.landscape"
			android:title="@string/preferences_columns_landscape_title"
			android:summary="@string/preferences_columns_landscape_summary"
			android:icon="@drawable/preferences_columns_landscape"
			min="2"
			max="5"
			android:defaultValue="3"/>
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/preferences_category_misc_title">
		<Preference
			android:key="prefs.show.changelog"
			android:title="@string/preferences_changelog_title"
			android:summary="@string/preferences_changelog_summary"
			android:icon="@drawable/preferences_changelog"/>

		<SwitchPreference
		android:dialogTitle="@string/preferences_ga_opt_out_title"
		android:key="prefs.google.analytics.opt.out"
		android:switchTextOff="@string/generic_no"
		android:switchTextOn="@string/generic_yes"
		android:title="@string/preferences_ga_opt_out_title"
		android:summary="@string/preferences_ga_opt_out_message"
		android:icon="@drawable/preferences_ga_opt_out"/>
	</PreferenceCategory>
</PreferenceScreen>