<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Information & Computational Sciences, The James Hutton Institute
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<!--<item-->
	<!--android:id="@+id/drawer_menu_visit_homepage"-->
	<!--android:icon="@drawable/drawer_homepage"-->
	<!--android:title="@string/menu_visit_homepage"/>-->
	<!--<item-->
	<!--android:id="@+id/drawer_menu_online_help"-->
	<!--android:icon="@drawable/drawer_help"-->
	<!--android:title="@string/menu_online_help"/>-->
	<item
		android:id="@+id/drawer_menu_data_source"
		android:icon="@drawable/drawer_data_source"
		android:title="@string/menu_data_source"/>
	<item
		android:id="@+id/drawer_menu_node_catalog"
		android:icon="@drawable/drawer_catalog"
		android:title="@string/menu_catalog"/>
	<item
		android:id="@+id/drawer_menu_log"
		android:icon="@drawable/drawer_log"
		android:title="@string/menu_log"/>
	<item
		android:id="@+id/drawer_menu_settings"
		android:icon="@drawable/drawer_settings"
		android:title="@string/menu_settings"/>
	<item
		android:id="@+id/drawer_menu_about"
		android:icon="@drawable/drawer_about"
		android:title="@string/menu_about"/>
</menu>