<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Information & Computational Sciences, The James Hutton Institute
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingStart="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingEnd="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin"
				android:paddingBottom="@dimen/activity_vertical_margin"
				android:layout_width="match_parent"
				android:layout_height="match_parent">

	<TextView
		android:id="@+id/network_status_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textColor="@android:color/white"
		android:text="@string/network_intro_title"
		android:layout_centerHorizontal="true"
		android:gravity="center_horizontal"
		android:textSize="20sp"/>

	<ImageView
		android:id="@+id/network_status_image"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:tint="@color/colorAccent"
		android:src="@drawable/status_network_available"/>

	<TextView
		android:id="@+id/network_status_message"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textColor="@android:color/white"
		android:text="@string/network_intro_status_available"
		android:layout_above="@id/network_status_image"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:layout_centerHorizontal="true"
		android:gravity="center_horizontal"
		android:textSize="18sp"/>


	<LinearLayout
		android:layout_alignParentBottom="true"
		android:orientation="horizontal"
		android:gravity="center_horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<Button
			android:id="@+id/network_status_settings"
			android:text="@string/network_intro_button_settings"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<Button
			android:id="@+id/network_status_refresh"
			android:text="@string/network_intro_button_refresh"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

	</LinearLayout>
</RelativeLayout>