<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 Information & Computational Sciences, The James Hutton Institute
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/log_details_root"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true">

	<android.support.design.widget.AppBarLayout
		android:id="@+id/log_details_app_bar"
		android:layout_width="match_parent"
		android:layout_height="300dp"
		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
		android:fitsSystemWindows="true">

		<android.support.design.widget.CollapsingToolbarLayout
			android:id="@+id/log_details_collapsing"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			app:layout_scrollFlags="scroll|exitUntilCollapsed"
			app:expandedTitleTextAppearance="@style/TextAppearance.Design.CollapsingToolbar.Expanded.Shadow"
			android:fitsSystemWindows="true"
			app:contentScrim="?attr/colorPrimary"
			app:expandedTitleMarginStart="48dp"
			app:expandedTitleMarginEnd="64dp">

			<include layout="@layout/activity_node_images"/>

			<android.support.v7.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
				app:layout_collapseMode="pin"/>

		</android.support.design.widget.CollapsingToolbarLayout>

	</android.support.design.widget.AppBarLayout>

	<android.support.v4.widget.NestedScrollView
		android:id="@+id/log_details_nested_scroll"
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<LinearLayout
			android:id="@+id/log_details_layout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginStart="@dimen/activity_horizontal_margin"
			android:layout_marginLeft="@dimen/activity_horizontal_margin"
			android:layout_marginEnd="@dimen/activity_horizontal_margin"
			android:layout_marginRight="@dimen/activity_horizontal_margin"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			android:layout_marginBottom="@dimen/activity_vertical_margin"
			android:focusable="true"
			android:focusableInTouchMode="true"
			android:orientation="vertical">

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				<android.support.design.widget.TextInputEditText
					android:id="@+id/log_details_datasource"
					android:hint="@string/title_datasource"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"/>
			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				<android.support.design.widget.TextInputEditText
					android:id="@+id/log_details_node_name"
					android:hint="@string/title_node_name"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"/>
			</android.support.design.widget.TextInputLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<android.support.design.widget.TextInputLayout
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_height="wrap_content">
					<android.support.design.widget.TextInputEditText
						android:id="@+id/log_details_latitude"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="numberDecimal|numberSigned"
						android:hint="@string/title_latitude"/>
				</android.support.design.widget.TextInputLayout>

				<android.support.design.widget.TextInputLayout
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_height="wrap_content">
					<android.support.design.widget.TextInputEditText
						android:id="@+id/log_details_longitude"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="numberDecimal|numberSigned"
						android:hint="@string/title_longitude"/>
				</android.support.design.widget.TextInputLayout>

				<ImageButton
					android:id="@+id/log_details_gps_button"
					android:layout_width="48dp"
					android:layout_height="match_parent"
					android:layout_weight="0"
					android:background="?android:selectableItemBackground"
					android:src="@drawable/marker_small"/>

			</LinearLayout>


			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				<android.support.design.widget.TextInputEditText
					android:id="@+id/log_details_note"
					android:lines="3"
					android:hint="@string/node_details_note_hint"
					android:inputType="textCapSentences|textAutoCorrect"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"/>
			</android.support.design.widget.TextInputLayout>

		</LinearLayout>

	</android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>